<resources>
    <string name="app_name">EgyFilm</string>
    <string name="description">Description</string>
    <string name="actors">Actors</string>
    <string name="similar">Similar Movies</string>
    <string name="recommendations">Recommendations</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="see_more" translatable="false"><![CDATA[See More>>]]></string>
    <string name="img_trans" translatable="false">imgTrans</string>
    <string name="overview">OverView</string>
    <string name="movies">Movies</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search...</string>
    <string name="birth_date">Birth Date:</string>
    <string name="age">Age:</string>
    <string name="death_date">Death Date:</string>
    <string name="place_of_birth">Birth Place:</string>
    <string name="alive">Alive</string>
    <string name="years">Years</string>
    <string name="login">Login</string>
    <string name="username">UserName...</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="re_password">Re-Password...</string>
    <string name="already_have_account">Already have account</string>
    <string name="dont_have_account">Don\'t have an account</string>
    <string name="signup">Signup</string>
    <string name="login_as_a_guest">Login as a Guest</string>
    <string name="all_fields_are_required">All Fields Are Required !!</string>
    <string name="try_again_later">Some Error Happened, Please Try Again Later !!</string>
    <string name="make_sure_of_password">Password Fields Must Be Same !!</string>
    <string name="cant_love_movie">You Have To Sign Up First To Mark Movie As Favourite !!</string>
    <string name="added_to_favs">Added To Your Favourites !!</string>
    <string name="removed_from_favs">Removed From Your Favourites !!</string>
    <string name="signup_first">You Have To Signup First !!</string>
    <string name="favourites">Favourites</string>
    <string name="not_saved_movie">This Movie Is Not Saved !!!</string>
    <string name="connect_first">Internet Needed For this Operation !!</string>
    <string name="not_saved_actor">This Actor Is Not Saved !!</string>
</resources>