<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/App_back_color"
        app:layoutDescription="@xml/fragment_login_scene"
        tools:context=".ui.LoginFragment">

        <View
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/round_back"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/login"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/username"
            style="@style/login_field_style"
            android:hint="@string/username"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/email"
            style="@style/login_field_style"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            style="@style/login_field_style"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/repassword"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/repassword"
            style="@style/login_field_style"
            android:hint="@string/re_password"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/log_fab"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:backgroundTint="@color/app_secondary_color"
            android:elevation="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login"
            app:backgroundTint="@color/app_secondary_color"
            app:borderWidth="0dp"
            app:fabCustomSize="@dimen/_45sdp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:maxImageSize="@dimen/_30sdp" />

        <TextView
            android:id="@+id/switch_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/round_back"
            android:backgroundTint="@color/app_secondary_color"
            android:fontFamily="@font/allerta_stencil"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_7sdp"
            android:text="@string/dont_have_account"
            android:textColor="@color/App_back_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <TextView
            android:id="@+id/guest_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_as_a_guest"
            android:textColor="@color/app_secondary_color"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_fab" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_marginBottom="@dimen/_20sdp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>