<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.egyfilm.pojo.classes.MovieFullData" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_movie_details_scene"
        android:background="@color/App_back_color"
        tools:context=".ui.MovieDetailsFragment">

        <ImageView
            android:id="@+id/imageView"
            setMovieBackImageFromTMDB="@{movie}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            app:layout_constraintDimensionRatio="1.8:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/round_back"
            android:backgroundTint="@color/App_back_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="0dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15">

            <ImageView
                setMovieImageFromTMDB="@{movie}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dune" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_gravity="center|bottom"
            android:backgroundTint="@color/app_secondary_color"
            android:elevation="11dp"
            android:src="@drawable/ic_play"
            app:backgroundTint="@color/app_secondary_color"
            app:borderWidth="0dp"
            app:fabCustomSize="@dimen/fab_size"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:maxImageSize="@dimen/fab_size" />

        <TextView
            android:id="@+id/title"
            setMovieTitle="@{movie}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta_stencil"
            android:textAlignment="center"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/description"
                    android:textColor="@color/text_color_1"
                    android:textSize="@dimen/title_size" />

                <TextView
                    setMovieDescription="@{movie}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/allerta_stencil"
                    android:textColor="@color/text_color_1"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/actors"
                    android:textColor="@color/text_color_1"
                    android:textSize="@dimen/title_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="15"
                    tools:listitem="@layout/small_movie_item" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/allerta_stencil"
                        android:text="@string/similar"
                        android:textColor="@color/text_color_1"
                        android:textSize="@dimen/title_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/allerta_stencil"
                        android:text="@string/see_more"
                        android:textColor="@color/text_color_1"
                        android:textSize="@dimen/_10sdp" />
                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="15"
                    tools:listitem="@layout/small_movie_item" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/allerta_stencil"
                        android:text="@string/recommendations"
                        android:textColor="@color/text_color_1"
                        android:textSize="@dimen/title_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/allerta_stencil"
                        android:text="@string/see_more"
                        android:textColor="@color/text_color_1"
                        android:textSize="@dimen/_10sdp" />
                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="15"
                    tools:listitem="@layout/small_movie_item" />


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>