<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.egyfilm.pojo.viewModelUtils.UserDetailsViewModel" />

        <variable
            name="actor"
            type="com.example.egyfilm.pojo.classes.ActorFullData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UserDetailsFragment">

        <ImageView
            android:id="@+id/imageView"
            setActorImageFromFullData="@{actor}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_top_back"
                android:padding="20dp"
                app:behavior_peekHeight="@dimen/_60sdp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title"
                        setActorFullDataName="@{actor}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:fontFamily="@font/allerta_stencil"
                        android:textAlignment="center"
                        android:textColor="@color/text_color_1"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Dune" />

                    <ScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_22sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="@string/birth_date"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/title_size" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="3/11/1960"
                                    setActorBirthDate = "@{actor}"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/_16ssp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="@string/age"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/title_size" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="50 Years"
                                    setActorAge="@{actor}"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/_16ssp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="@string/death_date"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/title_size" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="3/6/2015"
                                    setActorDeathDate="@{actor}"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/_16ssp" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="@string/place_of_birth"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/title_size" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:fontFamily="@font/allerta_stencil"
                                    android:text="LA"
                                    setActorBirthPlace="@{actor}"
                                    android:textColor="@color/text_color_1"
                                    android:textSize="@dimen/_16ssp" />

                            </LinearLayout>



                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:layout_marginStart="10dp"
                                android:fontFamily="@font/allerta_stencil"
                                android:text="@string/overview"
                                android:textColor="@color/text_color_1"
                                android:textSize="@dimen/title_size" />

                            <TextView
                                setActorOverView="@{actor}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:fontFamily="@font/allerta_stencil"
                                android:textColor="@color/text_color_1"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:fontFamily="@font/allerta_stencil"
                                android:text="@string/movies"
                                android:textColor="@color/text_color_1"
                                android:textSize="@dimen/title_size" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/actor_rec"
                                setActorsMoviesRecyclerViewItems="@{viewModel.actorMoviesLiveData}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:itemCount="15"
                                tools:listitem="@layout/small_movie_item" />

                        </LinearLayout>
                    </ScrollView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>